# terraform-test-mcp

./: CLAUDE_CODE_PROMPT.md  Dockerfile  README.md  docker-compose.yml  main.py  mcp_wrapper.sh  prompt_old.md  prompt_template.md  pyproject.toml
.claude/skills/terraform-test-generator/: skill.md
.claude/skills/terraform-test-generator/reference/: anti-patterns.md  cloud-providers.md  compliance-patterns.md  syntax-examples.md  validation-patterns.md  verification-checklist.md
.claude/skills/terraform-test-generator/templates/: integration-test-template.hcl  mock-test-template.hcl  unit-test-template.hcl
